updating requirements.txt, excluding playground

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
-madmom==0.16.1
-matplotlib==3.0.0
-pydub==0.23.0
+matchering==2.0.2
+colorcet==2.0.1
+librosa==0.7.1
+pydub==0.24.1
+SoundFile==0.10.3.post1
+audioread==2.1.6
 networkx==2.2
-pyacoustid==1.1.5
-MDP==3.5
-numpy==1.16.1
-librosa==0.6.2
-scipy==1.1.0
-pandas
-pyAudioAnalysis
-eyeD3
-
+matplotlib==3.1.2
+scipy==1.4.1
+urllib3==1.22
+pandas==1.0.1
+aubio==0.4.7
+numpy==1.13.3
+pyunicorn==0.6.0
+essentia==2.1b6.dev374
+pyAudioAnalysis==0.3.6
